TestEngine is moved to a separate module so that javageci-jamal can be used without the test engine