@@ -17,6 +17,7 @@
         <module>javageci-jamal</module>
         <module>javageci-jamal-test</module>
         <module>javageci-core-annotations</module>
+        <module>javageci-testengine</module>
     </modules>
     <licenses>
         <license>
@@ -98,24 +99,12 @@
                             --add-opens geci.examples/javax0.geci.tests.record=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tests.accessor=ALL-UNNAMED
                             --add-opens geci.examples/javax0.geci.tests.equals=ALL-UNNAMED
-                            --add-opens geci.examples/javax0.geci.test.tools.lexeger=ALL-UNNAMED
+                            --add-opens geci.examples/javax0.geci.jamal.test.tools.lexeger=ALL-UNNAMED
                             --add-exports geci.examples/javax0.geci.tests.fluent=geci.tools
                             --add-exports geci.examples/javax0.geci.tutorials.simple=geci.core
                             --add-exports geci.examples/javax0.geci.tests.fluent=geci.core
                             --add-exports geci.examples/javax0.geci.buildfluent=geci.core
                             --add-exports geci.examples/javax0.geci.geci.jamal.reflection=ALL-UNNAMED
-                            --add-opens geci.jamal/javax0.geci.jamal=ALL-UNNAMED --add-exports
-                            geci.jamal/javax0.geci.jamal=ALL-UNNAMED
-                            --add-opens geci.jamal/javax0.geci.jamal.util=ALL-UNNAMED --add-exports
-                            geci.jamal/javax0.geci.jamal.util=ALL-UNNAMED
-                            --add-opens geci.jamal/javax0.geci.jamal.sample=ALL-UNNAMED --add-exports
-                            geci.jamal/javax0.geci.jamal.sample=ALL-UNNAMED
-                            --add-opens geci.jamal/javax0.geci.jamal=org.junit.platform.commons --add-exports
-                            geci.jamal/javax0.geci.jamal=org.junit.platform.commons
-                            --add-opens geci.jamal/javax0.geci.jamal.util=org.junit.platform.commons --add-exports
-                            geci.jamal/javax0.geci.jamal.util=org.junit.platform.commons
-                            --add-opens geci.jamal/javax0.geci.jamal.sample=org.junit.platform.commons --add-exports
-                            geci.jamal/javax0.geci.jamal.sample=org.junit.platform.commons
                             --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                             --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                         </argLine>
@@ -218,6 +207,16 @@
                 <version>1.6.3-SNAPSHOT</version>
             </dependency>
             <dependency>
+                <groupId>com.javax0.geci</groupId>
+                <artifactId>javageci-jamal</artifactId>
+                <version>1.6.3-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.javax0.geci</groupId>
+                <artifactId>javageci-testengine</artifactId>
+                <version>1.6.3-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
                 <version>5.7.0</version>
@@ -280,6 +279,18 @@
             <dependency>
                 <groupId>com.javax0.jamal</groupId>
                 <artifactId>jamal-yaml</artifactId>
+                <version>1.7.7</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.javax0.jamal</groupId>
+                <artifactId>jamal-tools</artifactId>
+                <version>1.7.7</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.javax0.jamal</groupId>
+                <artifactId>jamal-api</artifactId>
                 <version>1.7.7</version>
                 <scope>test</scope>
             </dependency>
